tests/errors/reserved_keyword.rsg
// TEST: compile_error
// EXPECT-ERROR: 'async' is a reserved keyword
module test_err

fn main() {
    async := 42
}
